tests/res/has/error_value_match.say
say x = 1;
x has { a: x + 1 }; // error: A `has` value must be a literal, a type name, or a nested shape
